--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Shraban Roy!</h1>
-				<p>I'm an ECE undergraduate student from Institute of Radiophysics & Electronics, University of calcutta <em>A Nature Lover and Interested in VLSI designing & IoT system.</em> My favorite quote-</em> "The mind is everything, What you think, you become." -BUDDHA <a href="/about">Read more about my life...</a></p>
+				<h4><p>I'm an ECE undergraduate student from Institute of Radiophysics & Electronics, University of calcutta </p></h4>
+			<h3><p><em>A Nature Lover and Interested in VLSI designing & IoT system</em></p></h3> 
+			<p> My favorite quote-</em> <h3>"The mind is everything, What you think, you become." -BUDDHA</h3> <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
