--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>SHRABAN ROY, 4 Year Btech in Electronics & Communication Engineering</title>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="auxiliary/css/main.css">
 	</head>
 	<body>
 		<nav>
