--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>SHRABAN ROY, 4 Year Btech in Electronics & Communication Engineering</title>
+		<title>SHRABAN ROY </title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="auxiliary/css/main.css">
 	</head>
