--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>SHRABAN ROY </title>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="auxiliar/css/main.css">
+		<link rel="stylesheet" type="text/css" href="auxiliary/css/main.css">
 	</head>
 	<body>
 		<nav>
